fixed input field spacing

--- a/client/src/components/login-view/login-view.scss
+++ b/client/src/components/login-view/login-view.scss
@@ -1,3 +1,3 @@
-.form-control {
+.login-field {
   margin: 5px 0px 5px 0px !important;
 }
