--- a/client/src/components/movies-list/movies-list.scss
+++ b/client/src/components/movies-list/movies-list.scss
@@ -8,7 +8,7 @@
   margin-bottom: 20px !important;
 }
 
-.form-control {
-  margin: 50px 60px 50px 70px;
+.search-bar {
+  margin: 50px 60px 50px 70px !important;
   max-width: 1630px;
 }
